fixed issues with audio not finishing when modal closes. Improved header visibility.

--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,7 @@ body,
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
+  font-weight: 700;
 }
 
 .header__messagearea {
